
2021-01-10  Ron Norman <rjn@inglenet.com> 

	* fisam.c: Additional work for ISAM logging/transaction ability
	           VB-ISAM 2.2 in default and CISAM mode works fine
			   D-ISAM 7.0 is not working in transaction mode
			   and it may be that D-ISAM 7.2 or better is required

2021-01-09  Ron Norman <rjn@inglenet.com> 

	* fileio.c: Updated to track if file was modified or not
				and then skip commit/rollback if no modification
	* fisam.c: Code added for use of ISAM logging/transaction ability
	* foci.c, fodbc.c: Set on flag_log_support always

2021-01-06  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (io_rtns): module name without file extension
	* call.c (cob_load_lib): concat COB_MODULE_EXT to library_name
	* common.c (print_version): welcome 2021

2021-01-04  Ron Norman <rjn@inglenet.com> 

	* fileio.c: If old style OpenCobol EXTFH is used then mark it as present

2020-12-26  Ron Norman <rjn@inglenet.com> 

	* Makefile.am, fisam.c, fileio.c: Added option to configure
	  --with-static-isam which will compile and link the ISAM handler 
	  into libcob instead of shared library

2020-12-24  Ron Norman <rjn@inglenet.com> 

	* Makefile.am, fisam.c, fileio.c, libcobxx.c: 
	  Updates to build all INDEXED file handlers as shared code library

2020-12-23  Ron Norman <rjn@inglenet.com> 

	* Makefile.am: Updates to build most INDEXED file handlers
	  as shared code library
	* coblocal.h: Updates to build INDEXED file handlers as shared library
	* fileio.h: Updates to build INDEXED file handlers as shared library
	* fileio.c: Updates to build INDEXED file handlers as shared library

2020-12-23  Ron Norman <rjn@inglenet.com>

	* call.c: added 'reason' parameter to cob_load_lib
	* fileio.c: Uses 'reason' if available when problem loading module

2020-12-22  Ron Norman <rjn@inglenet.com>

	* fisam.c (isam_version), fbdb.c (bdb_version), foci.c (oci_version),
	  fodbc.c (odbc_version): added to return the the underlying handler version